fix: add z-index to make mobile navbar always at the top

--- a/src/style/components/_mobile-menu.scss
+++ b/src/style/components/_mobile-menu.scss
@@ -3,6 +3,7 @@
 }
 
 .mobile-menu {
+  z-index: 1;
   position: fixed;
   top: 0;
   left: -100vw;
